--- a/eco/store/templates/store/cart.html
+++ b/eco/store/templates/store/cart.html
@@ -4,15 +4,15 @@
 <div>
     <div class="col-lg-12">
         <div class="box-element">
-            <a class="btn btn-dark" href="{% url 'store' %}">&#x2190; Continue Shopping </a>
+            <a class="btn btn-dark" href="{% url 'store' %}">&#x2190; Продовжити покупки </a>
             <br>
             <br>
             <table class="table">
                 <tr>
-                    <th><h5>Items: <strong>3</strong></h5></th>
-                    <th><h5>Total: <strong>60$</strong></h5></th>
+                    <th><h5>Кількість позицій: <strong>{{ order.get_cart_items }}</strong></h5></th>
+                    <th><h5>Разом: <strong>{{ order.get_cart_total }} грн.</strong></h5></th>
                     <th>
-                        <a style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Checkout</a>
+                        <a style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Оформлення замовлення</a>
                     </th>
                 </tr>
             </table>
@@ -23,26 +23,27 @@
         <div class="box-element">
             <div class="cart-row">
 					<div style="flex:2"></div>
-					<div style="flex:2"><strong>Item</strong></div>
-					<div style="flex:1"><strong>Price</strong></div>
-					<div style="flex:1"><strong>Quantity</strong></div>
-					<div style="flex:1"><strong>Total</strong></div>
+					<div style="flex:2"><strong>Назва товару</strong></div>
+					<div style="flex:1"><strong>Ціна</strong></div>
+					<div style="flex:1"><strong>Кількість</strong></div>
+					<div style="flex:1"><strong>Всього</strong></div>
             </div>
+            {% for item in items %}
             <div class="cart-row">
-					<div style="flex:2"><img class="row-image" src="{% static 'images/placeholder.png' %}"></div>
-					<div style="flex:2"><p>Product 1</p></div>
-					<div style="flex:1"><p>$20</p></div>
+					<div style="flex:2"><img class="row-image" src="{{ item.product.image_url }}"></div>
+					<div style="flex:2"><p>{{ item.product.name }}</p></div>
+					<div style="flex:1"><p>{{ item.product.price }} грн.</p></div>
 					<div style="flex:1">
-						<p class="quantity">2</p>
+						<p class="quantity">{{ item.quantity }}</p>
 						<div class="quantity">
 							<img class="chg-quantity" src="{% static  'images/arrow-up.png' %}">
 
 							<img class="chg-quantity" src="{% static  'images/arrow-down.png' %}">
 						</div>
 					</div>
-					<div style="flex:1"><p>$32</p></div>
+					<div style="flex:1"><p>{{ item.get_total }}</p></div>
             </div>
-
+            {% endfor %}
         </div>
     </div>
 </div>
