--- a/eco/store/templates/store/store.html
+++ b/eco/store/templates/store/store.html
@@ -2,31 +2,18 @@
 {% load static %}
 {% block content %}
 <div class="row">
+    {% for product in products %}
     <div class="col-lg-4">
-        <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
+        <img class="thumbnail" src="{{ product.image_url }}">
         <div class="box-element product">
-            <h6><strong>Product</strong></h6>
+            <h6><strong>{{ product.name }}</strong></h6>
             <hr>
-            <button type="button" class="btn btn-success">Add to Card</button>
+
+            <button type="button" class="btn btn-success">Купити</button>
             <a class="btn btn-light" href="#">View</a>
-            <h4 style="display: inLine-block;float: right">20$</h4>
+            <h4 style="display: inLine-block;float: right"><strong>{{ product.price|floatformat:2}} грн.</strong></h4>
         </div>
     </div>
-    <div class="col-lg-4">
-        <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
-        <div class="box-element product">
-            <h6><strong>Product</strong></h6>
-            <hr>
-            <button type="button" class="btn btn-success">Add to Card</button>
-        </div>
-    </div>
-    <div class="col-lg-4">
-        <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
-        <div class="box-element product">
-            <h6><strong>Product</strong></h6>
-            <hr>
-            <button type="button" class="btn btn-success">Add to Card</button>
-        </div>
-    </div>
+    {% endfor %}
 </div>
 {% endblock content %}
